Defined some partials and the #/dashboard

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -41,10 +41,10 @@
     <!-- Include the view file for the current controller/route -->
     <%- body %>
 
-    <ul class="menu">
+    <!--<ul class="menu">
       <li><a id="showView1" href="#/view1">show view1</a></li>
       <li><a id="showView2" href="#/view2">show view2</a></li>
-    </ul>
+    </ul>-->
 
     <div data-ng-view></div>
 
