--- a/assets/js/app/partials/dashboard.html
+++ b/assets/js/app/partials/dashboard.html
@@ -1,4 +1,4 @@
 <ng-include src="'js/app/partials/horiAdminMenu.html'"></ng-include>
 <ng-include src="'js/app/partials/leftAdminMenu.html'"></ng-include>
-
+<p>{{bars}}</p>
 <p>This is my dashboard</p>
