Start implementing sombe directives for the admin left side menu

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,6 +21,7 @@
       
     -->
     <link rel="stylesheet" href="/js/app/lib/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/js/app/lib/fontawesome/css/font-awesome.min.css">
 
     <!--
 
