--- a/assets/js/app/partials/header.html
+++ b/assets/js/app/partials/header.html
@@ -4,7 +4,7 @@
 				<!-- PLACE YOUR LOGO HERE -->
 				<span id="logo"> <img src="img/logo.png" alt="SmartAdmin"> </span>
 				<!-- END LOGO PLACEHOLDER -->
-				<span data-ng-controller="ActivityDemoCtrl">
+				<span>
 					<activity data-onrefresh="refreshCallback">
 						<activity:button data-icon="fa fa-user" data-total="total" />
 						<activity:content data-footer="footerContent">
@@ -153,7 +153,7 @@
 				<!-- end voice command -->
 
 				<!-- multiple lang dropdown : find all flags in the image folder -->
-				<ul data-lang-menu="" class="header-dropdown-list hidden-xs" data-ng-controller="LangController">
+				<ul data-lang-menu="" class="header-dropdown-list hidden-xs">
 					<li>
 						<a href="" class="dropdown-toggle" data-toggle="dropdown">
 							<img alt="" class="flag flag-{{ currentLang.flagCode }}" src="img/blank.gif"> <span> {{ currentLang.translation }} </span> <i class="fa fa-angle-down"></i> 
