--- a/assets/js/app/partials/pages/pages-edit.html
+++ b/assets/js/app/partials/pages/pages-edit.html
@@ -63,7 +63,7 @@
 
 						<footer>
 
-							<button type="submit" class="btn btn-primary" ng-click="ok(page.title, page.body)">
+							<button type="submit" class="btn btn-primary" ng-click="ok(page.id, page.title, page.body)">
 								Submit
 							</button>
 
