--- a/assets/js/app/partials/pages/pages-list.html
+++ b/assets/js/app/partials/pages/pages-list.html
@@ -65,29 +65,39 @@
 								</tr>
 								<tr role="row">
 									<th data-class="expand" class="sorting_asc" tabindex="0" aria-controls="datatable_fixed_column" rowspan="1" colspan="1" aria-label="Name: activate to sort column ascending" style="width: 144px;" aria-sort="ascending">Actions</th>
-									<th data-class="expand" class="sorting_asc" tabindex="0" aria-controls="datatable_fixed_column" rowspan="1" colspan="1" aria-label="Name: activate to sort column ascending" style="width: 144px;" aria-sort="ascending">Title</th>
-									<th class="sorting" tabindex="0" aria-controls="datatable_fixed_column" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 154px;">Body</th>
-									<th class="sorting" tabindex="0" aria-controls="datatable_fixed_column" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 154px;">Date</th>
+									<th ng-click="sort_by('title')" data-class="expand" class="sorting_asc" tabindex="0" aria-controls="datatable_fixed_column" rowspan="1" colspan="1" aria-label="Name: activate to sort column ascending" style="width: 144px;" aria-sort="ascending">Title</th>
+									<th ng-click="sort_by('body')" class="sorting" tabindex="0" aria-controls="datatable_fixed_column" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 154px;">Body</th>
+									<th ng-click="sort_by('date')" class="sorting" tabindex="0" aria-controls="datatable_fixed_column" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 154px;">Date</th>
 								</tr>
 							</thead>
 				
-							<tbody ng-repeat="page in pages | filter:criteria">
+							<tbody ng-repeat="item in pagedItems[currentPage] | filter:criteria | orderBy:sortingOrder:reverse">
 
 								<tr role="row" class="odd">
 									<td>
-									    <a href="#/pages/{{page.id}}/edit" class="btn btn-xs btn-default" data-original-title="Edit Row"><i class="fa fa-pencil"></i></a>
-									    <button class="btn btn-xs btn-default" data-original-title="Save Row" onclick="jQuery('#jqgrid').saveRow('1');"><i class="fa fa-save"></i></button><button class="btn btn-xs btn-default" data-original-title="Cancel" onclick="jQuery('#jqgrid').restoreRow('1');"><i class="fa fa-times"></i></button>
+									    <a href="#/pages/{{item.id}}/edit" class="btn btn-xs btn-default" data-original-title="Edit Row"><i class="fa fa-pencil"></i></a>
+									    
+									    <a ng-click="deleteInfo(item.id)"class="btn btn-xs btn-default" data-original-title="Delete Row"><i class="fa fa-times"></i></a>
+									    
 									</td>
-									<td class="sorting_1"><span class="responsiveExpander"></span>{{page.title}}</td>
-									<td>{{page.body}}</td>
-									<td>{{page.updatedAt | date:'dd-MM-yyyy HH:mm:ss'}}</td>
+									<td class="sorting_1"><span class="responsiveExpander"></span>{{item.title}}</td>
+									<td>{{item.body}}</td>
+									<td>{{item.updatedAt | date:'dd-MM-yyyy HH:mm:ss'}}</td>
 								</tr>
 
 							</tbody>
 									
 						</table>
 
-						<div class="dt-toolbar-footer"><div class="col-sm-6 col-xs-12 hidden-xs"><div class="dataTables_info" id="datatable_fixed_column_info" role="status" aria-live="polite">Showing <span class="txt-color-darken">1</span> to <span class="txt-color-darken">10</span> of <span class="text-primary">57</span> entries</div></div><div class="col-xs-12 col-sm-6"><div class="dataTables_paginate paging_simple_numbers" id="datatable_fixed_column_paginate"><ul class="pagination pagination-sm"><li class="paginate_button previous disabled" aria-controls="datatable_fixed_column" tabindex="0" id="datatable_fixed_column_previous"><a href="#">Previous</a></li><li class="paginate_button active" aria-controls="datatable_fixed_column" tabindex="0"><a href="#">1</a></li><li class="paginate_button " aria-controls="datatable_fixed_column" tabindex="0"><a href="#">2</a></li><li class="paginate_button " aria-controls="datatable_fixed_column" tabindex="0"><a href="#">3</a></li><li class="paginate_button " aria-controls="datatable_fixed_column" tabindex="0"><a href="#">4</a></li><li class="paginate_button " aria-controls="datatable_fixed_column" tabindex="0"><a href="#">5</a></li><li class="paginate_button " aria-controls="datatable_fixed_column" tabindex="0"><a href="#">6</a></li><li class="paginate_button next" aria-controls="datatable_fixed_column" tabindex="0" id="datatable_fixed_column_next"><a href="#">Next</a></li></ul></div></div></div></div>
+						<div class="dt-toolbar-footer"><div class="col-sm-6 col-xs-12 hidden-xs"><div class="dataTables_info" id="datatable_fixed_column_info" role="status" aria-live="polite">Showing <span class="txt-color-darken">1</span> to <span class="txt-color-darken">10</span> of <span class="text-primary">57</span> entries</div></div><div class="col-xs-12 col-sm-6"><div class="dataTables_paginate paging_simple_numbers" id="datatable_fixed_column_paginate"><ul class="pagination pagination-sm"><li ng-class="{disabled: currentPage == 0}" class="paginate_button previous " aria-controls="datatable_fixed_column" tabindex="0" id="datatable_fixed_column_previous"><a ng-click="prevPage()" >Previous</a></li>
+						
+						<li ng-repeat="n in range(pagedItems.length)"
+                                    ng-class="{active: n == currentPage}"
+                                ng-click="setPage()">
+                            <a href ng-bind="n + 1">1</a>
+                        </li>
+
+						<li ng-class="{disabled: currentPage == pagedItems.length - 1}" class="paginate_button next" aria-controls="datatable_fixed_column" tabindex="0" id="datatable_fixed_column_next"><a ng-click="nextPage()">Next</a></li></ul></div></div></div></div>
 				
 									</div>
 									<!-- end widget content -->
