--- a/assets/js/app/partials/pages/pages-new.html
+++ b/assets/js/app/partials/pages/pages-new.html
@@ -37,7 +37,7 @@
 				
 				<!-- widget content -->
 				<div class="widget-body no-padding">
-					<form class="smart-form" ng-controller="PagesEditCtrl">
+					<form class="smart-form" ng-controller="PagesNewCtrl">
 						<header>
 							Standard Form Header
 						</header>
@@ -60,8 +60,6 @@
 								<macareta my-model-attr="page.body"></macareta>
 							</section>
 						</fieldset>
-
-						
 
 						<footer>
 
