--- a/assets/js/app/partials/pages/pages-list.html
+++ b/assets/js/app/partials/pages/pages-list.html
@@ -89,7 +89,7 @@
 									
 						</table>
 
-						<div class="dt-toolbar-footer"><div class="col-sm-6 col-xs-12 hidden-xs"><div class="dataTables_info" id="datatable_fixed_column_info" role="status" aria-live="polite">Showing <span class="txt-color-darken">1</span> to <span class="txt-color-darken">10</span> of <span class="text-primary">57</span> entries</div></div><div class="col-xs-12 col-sm-6"><div class="dataTables_paginate paging_simple_numbers" id="datatable_fixed_column_paginate"><ul class="pagination pagination-sm"><li ng-class="{disabled: currentPage == 0}" class="paginate_button previous " aria-controls="datatable_fixed_column" tabindex="0" id="datatable_fixed_column_previous"><a ng-click="prevPage()" >Previous</a></li>
+						<div class="dt-toolbar-footer"><div class="col-sm-6 col-xs-12 hidden-xs"><div class="dataTables_info" id="datatable_fixed_column_info" role="status" aria-live="polite">Showing <span class="txt-color-darken">{{(currentPage*itemsPerPage)+1}}</span> to <span class="txt-color-darken">{{(pagedItems[currentPage].length*currentPage)+itemsPerPage}}</span> of <span class="text-primary">{{items.lenght}}</span> entries</div></div><div class="col-xs-12 col-sm-6"><div class="dataTables_paginate paging_simple_numbers" id="datatable_fixed_column_paginate"><ul class="pagination pagination-sm"><li ng-class="{disabled: currentPage == 0}" class="paginate_button previous " aria-controls="datatable_fixed_column" tabindex="0" id="datatable_fixed_column_previous"><a ng-click="prevPage()" >Previous</a></li>
 						
 						<li ng-repeat="n in range(pagedItems.length)"
                                     ng-class="{active: n == currentPage}"
@@ -102,9 +102,9 @@
 									</div>
 									<!-- end widget content -->
 				
-								</div>
+			</div>
 								<!-- end widget div -->
 				
-							</div>
+		</div>
 	</div>
 </div>
