--- a/assets/js/app/partials/pages/pages-edit.html
+++ b/assets/js/app/partials/pages/pages-edit.html
@@ -46,7 +46,7 @@
 							<section>
 								<label class="label">Default text input with maxlength</label>
 								<label class="input">
-									<input type="text" maxlength="10" ng-model="page.title" name="title">
+									<input type="text" maxlength="10" ng-model="item.title" name="title">
 								</label>
 								<div class="note">
 									<strong>Maxlength</strong> is automatically added via the "maxlength='#'" attribute
@@ -54,16 +54,15 @@
 							</section>														
 						</fieldset>
 
-							
 						<fieldset>
 							<section>
-								<macareta my-model-attr="page.body"></macareta>
+								<macareta my-model-attr="item.body"></macareta>
 							</section>
 						</fieldset>
 
 						<footer>
 
-							<button type="submit" class="btn btn-primary" ng-click="ok(page.id, page.title, page.body)">
+							<button type="submit" class="btn btn-primary" ng-click="ok(item.id, item.title, item.body)">
 								Submit
 							</button>
 
