--- a/assets/js/app/partials/leftAdminMenu.html
+++ b/assets/js/app/partials/leftAdminMenu.html
@@ -1,29 +1,55 @@
 <div ng-controller="LeftAdminMenu">
 
-<navigation>
-	<nav:group data-icon="fa fa-lg fa-fw fa-code" title="Angular Stuff" >
-	</nav:group>
-</navigation>
+	<navigation>
+		<nav:group data-icon="fa fa-lg fa-fw fa-code" title="Angular Stuff" >
+		</nav:group>
+	</navigation>
 
-<nav>
-				<!-- NOTE: Notice the gaps after each icon usage <i></i>..
+	<nav>
+					<!-- NOTE: Notice the gaps after each icon usage <i></i>..
 				Please note that these links work a bit different than
 				traditional href="" links. See documentation for details.
 				-->
 
-				<ul style="">
-					<li class="active">
-						<a href="index.html" title="Dashboard"><i class="fa fa-lg fa-fw fa-home"></i> <span class="menu-item-parent">Dashboard</span></a>
+		<ul style="">
+			<li class="active">
+				<a href="index.html" title="Dashboard"><i class="fa fa-lg fa-fw fa-home"></i> <span class="menu-item-parent">Dashboard</span></a>
+			</li>
+			<li>
+				<a><i class="fa fa-lg fa-fw fa-bar-chart-o"></i> <span class="menu-item-parent">Posts</span><b ng-click="show_post_options()" class="collapse-sign"><em class="fa fa-plus-square-o"></em></b></a>
+				
+				<ul ng-style="{'display':showPostOptions}">
+					<li>
+						<a href="#/posts">All posts</a>
 					</li>
 					<li>
-						<a href="#/pages"><i class="fa fa-lg fa-fw fa-inbox"></i> <span class="menu-item-parent">Posts</span><span class="badge pull-right inbox-badge">14</span></a>
+						<a href="#/posts/new">Add new</a>
 					</li>
 					<li>
-						<a href="#/pages"><i class="fa fa-lg fa-fw fa-inbox"></i> <span class="menu-item-parent">Pages</span><span class="badge pull-right inbox-badge">14</span></a>
+						<a href="#/categories">Categories</a>
 					</li>
 					<li>
-						<a href="inbox.html"><i class="fa fa-lg fa-fw fa-inbox"></i> <span class="menu-item-parent">Inbox</span><span class="badge pull-right inbox-badge">14</span></a>
+						<a href="#/tags">Tags</a>
 					</li>
+				</ul>
+			</li>
+			<li>
+				<a href="#/pages"><i class="fa fa-lg fa-fw fa-bar-chart-o"></i> <span class="menu-item-parent">Pages</span><b ng-click="show_page_options()" class="collapse-sign"><em class="fa fa-plus-square-o"></em></b></a>
+				
+				<ul ng-style="{'display':showPageOptions}">
+					<li>
+						<a href="#/pages">All pages</a>
+					</li>
+					<li>
+						<a href="#/pages/new">Add new</a>
+					</li>
+				</ul>
+			</li>
+			
+			<li>
+				<a href="inbox.html"><i class="fa fa-lg fa-fw fa-inbox"></i> <span class="menu-item-parent">Inbox</span><span class="badge pull-right inbox-badge">14</span></a>
+			</li>
+			
 					<li>
 						<a href="#"><i class="fa fa-lg fa-fw fa-bar-chart-o"></i> <span class="menu-item-parent">Graphs</span><b class="collapse-sign"><em class="fa fa-plus-square-o"></em></b></a>
 						<ul>
