Trying to upload files with sails 0.9 has been a pain in the ass. I opted to migrate to 0.10.4 it comes with skipper but it has been another headache

--- a/assets/js/app/partials/leftAdminMenu.html
+++ b/assets/js/app/partials/leftAdminMenu.html
@@ -45,6 +45,18 @@
 					</li>
 				</ul>
 			</li>
+			<li>
+				<a href="#/media"><i class="fa fa-lg fa-fw fa-bar-chart-o"></i> <span class="menu-item-parent">Media</span><b ng-click="show_media_options()" class="collapse-sign"><em class="fa fa-plus-square-o"></em></b></a>
+				
+				<ul ng-style="{'display':showMediaOptions}">
+					<li>
+						<a href="#/media">All media</a>
+					</li>
+					<li>
+						<a href="#/media/new">Add media</a>
+					</li>
+				</ul>
+			</li>
 			
 			<li>
 				<a href="inbox.html"><i class="fa fa-lg fa-fw fa-inbox"></i> <span class="menu-item-parent">Inbox</span><span class="badge pull-right inbox-badge">14</span></a>
