Implemented some kind of publish pages with redis

--- a/assets/js/app/partials/pages/edit.html
+++ b/assets/js/app/partials/pages/edit.html
@@ -65,6 +65,11 @@
 
 						<footer>
 
+							<button  class="btn btn-primary" ng-click="publish(item.id)">
+								Publish
+							</button>
+
+
 							<button type="submit" class="btn btn-primary" ng-click="ok(item.id, item.title, item.body, item.order)">
 								Submit
 							</button>
