--- a/assets/js/app/partials/leftAdminMenu.html
+++ b/assets/js/app/partials/leftAdminMenu.html
@@ -45,6 +45,7 @@
 					</li>
 				</ul>
 			</li>
+			
 			<li>
 				<a href="#/media"><i class="fa fa-lg fa-fw fa-bar-chart-o"></i> <span class="menu-item-parent">Media</span><b ng-click="show_media_options()" class="collapse-sign"><em class="fa fa-plus-square-o"></em></b></a>
 				
@@ -57,7 +58,30 @@
 					</li>
 				</ul>
 			</li>
-			
+			<li>
+				<a href="#/appearance"><i class="fa fa-lg fa-fw fa-bar-chart-o"></i> <span class="menu-item-parent">Appearance</span><b ng-click="show_appearance_options()" class="collapse-sign"><em class="fa fa-plus-square-o"></em></b></a>
+				
+				<ul ng-style="{'display':showAppearanceOptions}">
+					<li>
+						<a href="#/pages">Themes</a>
+					</li>
+					<li>
+						<a href="#/pages/new">Customize</a>
+					</li>
+					<li>
+						<a href="#/pages/new">Widgets</a>
+					</li>
+					<li>
+						<a href="#/menus">Menus</a>
+					</li>
+					<li>
+						<a href="#/pages/new">Header</a>
+					</li>
+					<li>
+						<a href="#/pages/new">Background</a>
+					</li>
+				</ul>
+			</li>
 			<li>
 				<a href="inbox.html"><i class="fa fa-lg fa-fw fa-inbox"></i> <span class="menu-item-parent">Inbox</span><span class="badge pull-right inbox-badge">14</span></a>
 			</li>
