--- a/assets/js/app/partials/macareta.html
+++ b/assets/js/app/partials/macareta.html
@@ -2,7 +2,7 @@
 			
 	<div class="btn-group">
 		<div class="dropdown">
-			<button ng-click="cmd_h1()" class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+			<button ng-click="cmd_wrap('h1')" class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
 				    H1
 				<span class="caret"></span>
 			</button>
@@ -19,12 +19,12 @@
 		</div>
 	</div>
 
-	<button ng-click="cmd_h1()" type="button" class="btn btn-default" data-toggle="dropdown" title="" tabindex="-1" data-original-title="Style">
-				h1
+	<button ng-click="cmd_wrap('p')" type="button" class="btn btn-default" data-toggle="dropdown" title="" tabindex="-1" data-original-title="Style">
+		p
 	</button>
 	
-	<button ng-click="cmd_h2()" type="button" class="btn btn-default btn-sm btn-small dropdown-toggle" data-toggle="dropdown" title="" tabindex="-1" data-original-title="Style">
-				h2
+	<button ng-click="cmd_img()" type="button" class="btn btn-default btn-sm btn-small dropdown-toggle" data-toggle="dropdown" title="" tabindex="-1" data-original-title="Style">
+		img
 	</button>
 	<button ng-click="cmd_h3()" type="button" class="btn btn-default btn-sm btn-small dropdown-toggle" data-toggle="dropdown" title="" tabindex="-1" data-original-title="Style">
 				h3
