--- a/assets/js/app/partials/home/index.html
+++ b/assets/js/app/partials/home/index.html
@@ -1,7 +1,8 @@
-<div class="row" ng-repeat="item in items">
-	<h1>{{item.title}}</h1>
-	<div>
-		<div ng-bind-html="item.body"></div>
-	
+<div class="container">
+	<div class="row" ng-repeat="item in items">
+		<h1>{{item.title}}</h1>
+		<div>
+			<div ng-bind-html="item.body"></div>	
+		</div>
 	</div>
 </div>
