--- a/assets/js/app/partials/categories/list.html
+++ b/assets/js/app/partials/categories/list.html
@@ -40,7 +40,7 @@
 						-->
 						<header role="heading"><div class="jarviswidget-ctrls" role="menu">   <a href="javascript:void(0);" class="button-icon jarviswidget-toggle-btn" rel="tooltip" title="" data-placement="bottom" data-original-title="Collapse"><i class="fa fa-minus "></i></a> <a href="javascript:void(0);" class="button-icon jarviswidget-fullscreen-btn" rel="tooltip" title="" data-placement="bottom" data-original-title="Fullscreen"><i class="fa fa-expand "></i></a> <a href="javascript:void(0);" class="button-icon jarviswidget-delete-btn" rel="tooltip" title="" data-placement="bottom" data-original-title="Delete"><i class="fa fa-times"></i></a></div><div class="widget-toolbar" role="menu"><a data-toggle="dropdown" class="dropdown-toggle color-box selector" href="javascript:void(0);"></a><ul class="dropdown-menu arrow-box-up-right color-select pull-right"><li><span class="bg-color-green" data-widget-setstyle="jarviswidget-color-green" rel="tooltip" data-placement="left" data-original-title="Green Grass"></span></li><li><span class="bg-color-greenDark" data-widget-setstyle="jarviswidget-color-greenDark" rel="tooltip" data-placement="top" data-original-title="Dark Green"></span></li><li><span class="bg-color-greenLight" data-widget-setstyle="jarviswidget-color-greenLight" rel="tooltip" data-placement="top" data-original-title="Light Green"></span></li><li><span class="bg-color-purple" data-widget-setstyle="jarviswidget-color-purple" rel="tooltip" data-placement="top" data-original-title="Purple"></span></li><li><span class="bg-color-magenta" data-widget-setstyle="jarviswidget-color-magenta" rel="tooltip" data-placement="top" data-original-title="Magenta"></span></li><li><span class="bg-color-pink" data-widget-setstyle="jarviswidget-color-pink" rel="tooltip" data-placement="right" data-original-title="Pink"></span></li><li><span class="bg-color-pinkDark" data-widget-setstyle="jarviswidget-color-pinkDark" rel="tooltip" data-placement="left" data-original-title="Fade Pink"></span></li><li><span class="bg-color-blueLight" data-widget-setstyle="jarviswidget-color-blueLight" rel="tooltip" data-placement="top" data-original-title="Light Blue"></span></li><li><span class="bg-color-teal" data-widget-setstyle="jarviswidget-color-teal" rel="tooltip" data-placement="top" data-original-title="Teal"></span></li><li><span class="bg-color-blue" data-widget-setstyle="jarviswidget-color-blue" rel="tooltip" data-placement="top" data-original-title="Ocean Blue"></span></li><li><span class="bg-color-blueDark" data-widget-setstyle="jarviswidget-color-blueDark" rel="tooltip" data-placement="top" data-original-title="Night Sky"></span></li><li><span class="bg-color-darken" data-widget-setstyle="jarviswidget-color-darken" rel="tooltip" data-placement="right" data-original-title="Night"></span></li><li><span class="bg-color-yellow" data-widget-setstyle="jarviswidget-color-yellow" rel="tooltip" data-placement="left" data-original-title="Day Light"></span></li><li><span class="bg-color-orange" data-widget-setstyle="jarviswidget-color-orange" rel="tooltip" data-placement="bottom" data-original-title="Orange"></span></li><li><span class="bg-color-orangeDark" data-widget-setstyle="jarviswidget-color-orangeDark" rel="tooltip" data-placement="bottom" data-original-title="Dark Orange"></span></li><li><span class="bg-color-red" data-widget-setstyle="jarviswidget-color-red" rel="tooltip" data-placement="bottom" data-original-title="Red Rose"></span></li><li><span class="bg-color-redLight" data-widget-setstyle="jarviswidget-color-redLight" rel="tooltip" data-placement="bottom" data-original-title="Light Red"></span></li><li><span class="bg-color-white" data-widget-setstyle="jarviswidget-color-white" rel="tooltip" data-placement="right" data-original-title="Purity"></span></li><li><a href="javascript:void(0);" class="jarviswidget-remove-colors" data-widget-setstyle="" rel="tooltip" data-placement="bottom" data-original-title="Reset widget color to default">Remove</a></li></ul></div>
 							<span class="widget-icon"> <i class="fa fa-edit"></i> </span>
-							<h2>Checkout Form </h2>				
+							<h2>Category Form </h2>				
 							
 						<span class="jarviswidget-loader"><i class="fa fa-refresh fa-spin"></i></span></header>
 
@@ -123,40 +123,20 @@
 										
 										<tr role="row">
 											<th class="hasinput" style="width:17%" rowspan="1" colspan="1">
-												<input type="text" ng-model="criteria" class="form-control" placeholder="Filter Title">
+												<input type="text" ng-model="criteria" class="form-control" placeholder="Filter">
 											</th>
-											<th class="hasinput" style="width:18%" rowspan="1" colspan="1">
-												<div class="input-group">
-													<input class="form-control" placeholder="Filter Position" type="text">
-													<span class="input-group-addon">
-														<span class="onoffswitch">
-															<input type="checkbox" name="start_interval" class="onoffswitch-checkbox" id="st3">
-															<label class="onoffswitch-label" for="st3"> 
-																<span class="onoffswitch-inner" data-swchon-text="YES" data-swchoff-text="NO"></span> 
-																<span class="onoffswitch-switch"></span> 
-															</label> 
-														</span>
-													</span>
-												</div>
-											</th>
-											<th class="hasinput" style="width:16%" rowspan="1" colspan="1">
-												<input type="text" class="form-control" placeholder="Filter Office">
-											</th>
-											<th class="hasinput" style="width:17%" rowspan="1" colspan="1">
-												<input type="text" class="form-control" placeholder="Filter Age">
-											</th>
+											
 											<th class="hasinput icon-addon" rowspan="1" colspan="1">
 												<input id="dateselect_filter" type="text" placeholder="Filter Date" class="form-control datepicker hasDatepicker" data-dateformat="yy/mm/dd">
 												<label for="dateselect_filter" class="glyphicon glyphicon-calendar no-margin padding-top-15" rel="tooltip" title="" data-original-title="Filter Date"></label>
 											</th>
-											<th class="hasinput" style="width:16%" rowspan="1" colspan="1">
-												<input type="text" class="form-control" placeholder="Filter Salary">
-											</th>
+											
 										</tr>
 										<tr role="row">
 											<th data-class="expand" class="sorting_asc" tabindex="0" aria-controls="datatable_fixed_column" rowspan="1" colspan="1" aria-label="Name: activate to sort column ascending" style="width: 144px;" aria-sort="ascending">Actions</th>
-											<th ng-click="sort_by('title')" data-class="expand" class="sorting_asc" tabindex="0" aria-controls="datatable_fixed_column" rowspan="1" colspan="1" aria-label="Name: activate to sort column ascending" style="width: 144px;" aria-sort="ascending">Title</th>
-											<th ng-click="sort_by('body')" class="sorting" tabindex="0" aria-controls="datatable_fixed_column" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 154px;">Body</th>
+											<th ng-click="sort_by('name')" data-class="expand" class="sorting_asc" tabindex="0" aria-controls="datatable_fixed_column" rowspan="1" colspan="1" aria-label="Name: activate to sort column ascending" style="width: 144px;" aria-sort="ascending">Name</th>
+											<th ng-click="sort_by('slug')" class="sorting" tabindex="0" aria-controls="datatable_fixed_column" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 154px;">Slug</th>
+											<th ng-click="sort_by('description')" class="sorting" tabindex="0" aria-controls="datatable_fixed_column" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 154px;">Description</th>
 											<th ng-click="sort_by('date')" class="sorting" tabindex="0" aria-controls="datatable_fixed_column" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 154px;">Date</th>
 										</tr>
 									</thead>
@@ -165,13 +145,14 @@
 
 										<tr role="row" class="odd">
 											<td>
-											    <a href="#/pages/{{item.id}}/edit" class="btn btn-xs btn-default" data-original-title="Edit Row"><i class="fa fa-pencil"></i></a>
+											    <a href="#/categories/{{item.id}}/edit" class="btn btn-xs btn-default" data-original-title="Edit Row"><i class="fa fa-pencil"></i></a>
 											    
 											    <a ng-click="deleteInfo(item.id)"class="btn btn-xs btn-default" data-original-title="Delete Row"><i class="fa fa-times"></i></a>
 											    
 											</td>
-											<td class="sorting_1"><span class="responsiveExpander"></span>{{item.title}}</td>
-											<td>{{item.body}}</td>
+											<td class="sorting_1"><span class="responsiveExpander"></span>{{item.name}}</td>
+											<td>{{item.slug}}</td>
+											<td>{{item.description}}</td>
 											<td>{{item.updatedAt | date:'dd-MM-yyyy HH:mm:ss'}}</td>
 										</tr>
 
