Categories are removed in real time from the list

--- a/assets/js/app/partials/delete-dlg.html
+++ b/assets/js/app/partials/delete-dlg.html
@@ -14,5 +14,5 @@
 
 <div class="modal-footer">
       <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
-      <button type="button" class="btn btn-danger" ng-click="ok(page.id)" >Delete</button>
+      <button type="button" class="btn btn-danger" ng-click="okDelete(item.id)" >Delete</button>
 </div>
