--- a/assets/js/app/partials/categories/list.html
+++ b/assets/js/app/partials/categories/list.html
@@ -67,9 +67,19 @@
 											</label>
 										</section>
 
+						
 										<section>
 											<label for="slug" class="input">
 												<input type="text" name="slug" id="address2" ng-model="item.slug" placeholder="Slug">
+											</label>
+										</section>
+
+										<section>						
+											<label class="select"> 		
+											<select class="form-control" ng-model="item.parent" ng-options="element.name for element in items">
+											<option value="">Choice parent</option>
+											</select>
+											<i></i>
 											</label>
 										</section>
 
@@ -81,7 +91,7 @@
 									</fieldset>
 
 									<footer>
-										<button type="submit" ng-click="ok(item.name, item.slug, item.description)" class="btn btn-primary">
+										<button type="submit" ng-click="ok(item.name, item.slug, item.parent.name, item.description)" class="btn btn-primary">
 											Validate Form
 										</button>
 									</footer>
@@ -137,6 +147,8 @@
 											<th ng-click="sort_by('name')" data-class="expand" class="sorting_asc" tabindex="0" aria-controls="datatable_fixed_column" rowspan="1" colspan="1" aria-label="Name: activate to sort column ascending" style="width: 144px;" aria-sort="ascending">Name</th>
 											<th ng-click="sort_by('slug')" class="sorting" tabindex="0" aria-controls="datatable_fixed_column" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 154px;">Slug</th>
 											<th ng-click="sort_by('description')" class="sorting" tabindex="0" aria-controls="datatable_fixed_column" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 154px;">Description</th>
+											<th ng-click="sort_by('parent')" class="sorting" tabindex="0" aria-controls="datatable_fixed_column" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 154px;">Parent</th>
+											<th ng-click="sort_by('description')" class="sorting" tabindex="0" aria-controls="datatable_fixed_column" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 154px;">Author</th>
 											<th ng-click="sort_by('date')" class="sorting" tabindex="0" aria-controls="datatable_fixed_column" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 154px;">Date</th>
 										</tr>
 									</thead>
@@ -153,6 +165,8 @@
 											<td class="sorting_1"><span class="responsiveExpander"></span>{{item.name}}</td>
 											<td>{{item.slug}}</td>
 											<td>{{item.description}}</td>
+											<td>{{item.parent}}</td>
+											<td>{{item.author}}</td>
 											<td>{{item.updatedAt | date:'dd-MM-yyyy HH:mm:ss'}}</td>
 										</tr>
 
